Fix animation flickering during transition

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,5 @@
-.ion-page.menu-content.menu-content-overlay.menu-content-open {
-  pointer-events: visible;
-}
-
-.navbar-ion-page.ion-page.ion-page-invisible {
-  opacity: 1;
+.navbar-ion-page.menu-content.menu-content-overlay.menu-content-open {
+  pointer-events: all;
 }
 
 .navbar-ion-page.ion-page {
